--- a/About.html
+++ b/About.html
@@ -170,18 +170,18 @@
     <h3 class="subsection-title">Why Choose Us</h3>
     <hr>
     <p class="about-description">
-        Choosing Sheikh Tais Academy means choosing a place where your child will be challenged, supported, and inspired. We are not just a school — we are a family, a hub of innovation, and a stepping stone to a bright future. Together, we are shaping tomorrow’s leaders today.
+        Choosing Sheikh Tais Academy means choosing a place where your child will be challenged, supported, and inspired. We are not just a school — we are a family, a hub of innovation, and a stepping stone to a bright future. Together, we are shaping tomorrow's leaders today.
     </p>
 </div>
                     
                     <div class="about-image">
-                        <img src="/gallery/1757237855233.jpg" alt="Sheikh Tais Academy building" />
+                        <img src="./gallery/1757237855233.jpg" alt="Sheikh Tais Academy building" />
                     </div>
                 </div>
  <div class="video-container">
-                    <video controls poster="/gallery/1757238090495.jpg">
-                        <source src="/video/AQPZRahvU_Tbne9_hBrebr7acqL0RQbw9-lYUOjaJtThi5gYCX0Na_qg3PRSvhTiQZX3424Au4yNtzxoX1C0MIUP6zVQMJy0DQLTo6kz7PjdvQ.mp4">
-                        <p>Your browser doesn't support HTML5 video. Here's a <a href="/placeholder-demo.mp4">link to the video</a> instead.</p>
+                    <video controls poster="./gallery/1757238090495.jpg">
+                        <source src="./video/AQPZRahvU_Tbne9_hBrebr7acqL0RQbw9-lYUOjaJtThi5gYCX0Na_qg3PRSvhTiQZX3424Au4yNtzxoX1C0MIUP6zVQMJy0DQLTo6kz7PjdvQ.mp4">
+                        <p>Your browser doesn't support HTML5 video. Here's a <a href="./video/placeholder-demo.mp4">link to the video</a> instead.</p>
                     </video>
                 </div>
                 <!-- Stats Section -->
@@ -198,57 +198,22 @@
                             <div class="stat-icon">
                                 <i class="fas fa-chalkboard-teacher"></i>
                             </div>
-                            <h3 class="stat-number">17+</h3>
+                            <h3 class="stat-number">70+</h3>
                             <p class="stat-label">Qualified Teachers</p>
                         </div>
                         <div class="stat-item">
                             <div class="stat-icon">
-                                <i class="fas fa-award"></i>
+                                <i class="fas fa-calendar-alt"></i>
                             </div>
-                            <h3 class="stat-number">10+</h3>
-                            <p class="stat-label">Years of Excellence</p>
+                            <h3 class="stat-number">17+</h3>
+                            <p class="stat-label">Years Experience</p>
                         </div>
                         <div class="stat-item">
                             <div class="stat-icon">
                                 <i class="fas fa-trophy"></i>
                             </div>
-                            <h3 class="stat-number">100+</h3>
+                            <h3 class="stat-number">150+</h3>
                             <p class="stat-label">Awards Won</p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Values Section -->
-                <div class="values-section">
-                    <h2 class="section-title">Our Core Values</h2>
-                    <div class="values-grid">
-                        <div class="value-card">
-                            <div class="value-icon">
-                                <i class="fas fa-lightbulb"></i>
-                            </div>
-                            <h3 class="value-title">Innovation</h3>
-                            <p class="value-description">We embrace new ideas and technologies to enhance the learning experience.</p>
-                        </div>
-                        <div class="value-card">
-                            <div class="value-icon">
-                                <i class="fas fa-heart"></i>
-                            </div>
-                            <h3 class="value-title">Integrity</h3>
-                            <p class="value-description">We uphold the highest standards of honesty and ethical behavior.</p>
-                        </div>
-                        <div class="value-card">
-                            <div class="value-icon">
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <h3 class="value-title">Excellence</h3>
-                            <p class="value-description">We strive for excellence in everything we do, from teaching to student support.</p>
-                        </div>
-                        <div class="value-card">
-                            <div class="value-icon">
-                                <i class="fas fa-hands-helping"></i>
-                            </div>
-                            <h3 class="value-title">Community</h3>
-                            <p class="value-description">We foster a supportive and inclusive community for all stakeholders.</p>
                         </div>
                     </div>
                 </div>
@@ -300,7 +265,7 @@
                         <li><a href="documentation.html">Documentation</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="download.html">Download</a></li>
-                        <li><a href="#">Support</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 
