--- a/contact.html
+++ b/contact.html
@@ -106,24 +106,27 @@
                         <div class="contact-methods">
                             <div class="contact-method">
                                 <div class="contact-icon">
+                                    <i class="fas fa-map-marker-alt"></i>
                                 </div>
                                 <div class="contact-details">
                                     <h3>Address</h3>
-                                    <p>123 Education Street<br>Knowledge City, KC 12345<br>Country</p>
+                                    <p>Shell, Woodlowy Park<br>Freetown, Sierra Leone</p>
                                 </div>
                             </div>
 
                             <div class="contact-method">
                                 <div class="contact-icon">
+                                    <i class="fas fa-phone"></i>
                                 </div>
                                 <div class="contact-details">
                                     <h3>Phone</h3>
-                                    <p>Main Office: +1 (555) 123-4567<br>Admissions: +1 (555) 123-4568</p>
+                                    <p>Main Office: +232 (0) 123-4567<br>Admissions: +232 (0) 123-4568</p>
                                 </div>
                             </div>
 
                             <div class="contact-method">
                                 <div class="contact-icon">
+                                    <i class="fas fa-envelope"></i>
                                 </div>
                                 <div class="contact-details">
                                     <h3>Email</h3>
@@ -133,6 +136,7 @@
 
                             <div class="contact-method">
                                 <div class="contact-icon">
+                                    <i class="fas fa-clock"></i>
                                </div>
                                 <div class="contact-details">
                                     <h3>Office Hours</h3>
@@ -145,25 +149,25 @@
                     <!-- Contact Form -->
                     <div class="contact-form-section">
                         <h2 class="section-title">Send us a Message</h2>
-                        <form class="contact-form" id="contactForm">
+                        <form class="contact-form" id="contactForm" action="https://submit-form.com/your-form-id" method="POST">
                             <div class="form-group">
                                 <label for="name">Full Name *</label>
-                                <input type="text" id="name" name="name" required>
+                                <input type="text" id="name" name="name" class="form-input" required>
                             </div>
 
                             <div class="form-group">
                                 <label for="email">Email Address *</label>
-                                <input type="email" id="email" name="email" required>
+                                <input type="email" id="email" name="email" class="form-input" required>
                             </div>
 
                             <div class="form-group">
                                 <label for="phone">Phone Number</label>
-                                <input type="tel" id="phone" name="phone">
+                                <input type="tel" id="phone" name="phone" class="form-input">
                             </div>
 
                             <div class="form-group">
                                 <label for="subject">Subject *</label>
-                                <select id="subject" name="subject" required>
+                                <select id="subject" name="subject" class="form-select" required>
                                     <option value="">Select a subject</option>
                                     <option value="admissions">Admissions Inquiry</option>
                                     <option value="app-support">App Support</option>
@@ -176,7 +180,7 @@
 
                             <div class="form-group">
                                 <label for="message">Message *</label>
-                                <textarea id="message" name="message" rows="6" required placeholder="Please provide details about your inquiry..."></textarea>
+                                <textarea id="message" name="message" rows="6" class="form-textarea" required placeholder="Please provide details about your inquiry..."></textarea>
                             </div>
 
                             <div class="form-group checkbox-group">
@@ -187,7 +191,7 @@
                                 </label>
                             </div>
 
-                            <button type="submit" class="submit-btn">
+                            <button type="submit" class="btn btn-primary">
                                 <i class="fas fa-paper-plane"></i>
                                 Send Message
                             </button>
@@ -251,11 +255,11 @@
                     <div class="contact-info">
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>123 Education Street, City, Country</span>
+                            <span>Shell, Woodlowy Park, Freetown, Sierra Leone</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
-                            <span>+1 (555) 123-4567</span>
+                            <span>+232 (0) 123-4567</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
