--- a/news.html
+++ b/news.html
@@ -69,7 +69,7 @@
                 <i class="fas fa-times"></i>
             </button>
         </div>
-<ul class="sidebar-menu">
+        <ul class="sidebar-menu">
             <li><a href="index.html" class="sidebar-link">Home</a></li>
             <li><a href="about.html" class="sidebar-link">About</a></li>
             <li><a href="features.html" class="sidebar-link">Features</a></li>
@@ -100,18 +100,29 @@
                     <div class="news-grid">
                         <article class="featured-article">
                         <div class="featured-image">
-                            <img src="/img/fire-breaking-news.jpg" alt="Annual Sports Day 2024" />
+                            <img src="./img/fire-breaking-news.jpg" alt="Fire incident at Sheikh Tais Academy" />
                         </div>
                         <div class="featured-content">
                             <div class="article-meta">
-                                <span class="article-date"><i class="fas fa-calendar"></i></span>
-                                <span class="article-category">Events</span>
+                                <span class="article-date"><i class="fas fa-calendar"></i> May 15, 2025</span>
+                                <span class="article-category">Breaking News</span>
                             </div>
-                            <h3 class="article-title">BREAKING NEWS: </h3>
+                            <h3 class="article-title">Fire Incident at Sheikh Tais Academy</h3>
                             <p class="article-excerpt">
-                                A devastating fire broke out near Sheikh Tais Academy earlier today, sending shockwaves through the school community and beyond.
+                                A devastating fire broke out near Sheikh Tais Academy earlier today, sending shockwaves through the school community and beyond. The academy's main hall was destroyed in the incident.
                             </p>
                             <a href="news-info-fire.html" class="read-more-btn">Read Full Article <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </article>
+                    <article class="news-card">
+                        <div class="news-date">
+                            <span class="month">Nov</span>
+                            <span class="day">28</span>
+                        </div>
+                        <div class="news-content">
+                            <h3 class="news-title">New Computer Lab Opening</h3>
+                            <p class="news-excerpt">We're excited to announce the opening of our state-of-the-art computer lab with the latest technology for our students.</p>
+                            <a href="#" class="news-link">Read More</a>
                         </div>
                     </article>
                     </div>
@@ -173,11 +184,11 @@
                     <div class="contact-info">
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>123 Education Street, City, Country</span>
+                            <span>Shell, Woodlowy Park, Freetown, Sierra Leone</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
-                            <span>+1 (555) 123-4567</span>
+                            <span>+232 (0) 123-4567</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
