--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
     <meta name="author" content="Momo Mustapha Sandi" />
     <meta name="keywords" content="Sheikh Tais Academy, Sheikh Tais Accademy, education, learning, academy, online courses, students, Sierra Leone, Momo Mustapha Sandi" />
     <meta name="robots" content="index, follow" />
+    
+    <meta name="google-site-verification" content="uTkYdAWQtYgiMGSXfToW2lX6pKkI3_IU7KU4v0OYgnQ" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://sheikh-tais-academy.vercel.app/" />
+    <link rel="canonical" href="https://tais-academy.netlify.app/" />
 
     <!-- Open Graph / Facebook / WhatsApp / LinkedIn -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://sheikh-tais-academy.vercel.app/" />
+    <meta property="og:url" content="https://tais-academy.netlify.app/" />
     <meta property="og:title" content="Sheikh Tais Academy - Learn and Grow" />
     <meta property="og:description" content="Sheikh Tais Academy is a website developed by Momo Mustapha Sandi, empowering students with education and resources." />
     <meta property="og:image" content="https://i.imghippo.com/files/fHg5750kXU.jpg" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://sheikh-tais-academy.vercel.app/" />
+    <meta name="twitter:url" content="https://tais-academy.netlify.app//" />
     <meta name="twitter:title" content="Sheikh Tais Academy - Learn and Grow" />
     <meta name="twitter:description" content="Sheikh Tais Academy is a website developed by Momo Mustapha Sandi, empowering students with education and resources." />
     <meta name="twitter:image" content="https://i.imghippo.com/files/fHg5750kXU.jpg" />
