--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sheikh Tais Academy - School Management App</title>
+    <title>Sheikh Tais Academy</title>
     <meta name="description" content="Sheikh Tais Academy - Your comprehensive school management app for students, parents, and teachers.">
     
     <!-- Google Fonts -->
