--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Website Title -->
-    <title>Sheikh Tais Academy - Learn and Grow</title>
+    <title>Sheikh Tais Academy - Sheikh Tais</title>
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="Sheikh Tais Academy - A website developed by Momo Mustapha Sandi, empowering students with quality education and resources." />
