--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="google-site-verification" content="OSRBi3QbwcKf0dQmXO3y1OvrhkvnoJtoe7lImUxHXw8" />
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://tais-academy.netlify.app/" />
+    <link rel="canonical" href="https://tais-academy.vercel.app/" />
 
     <!-- Open Graph / Facebook / WhatsApp / LinkedIn -->
     <meta property="og:type" content="website" />
@@ -41,16 +41,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Splash Screen -->
-    <div id="splash-screen" class="splash-screen">
-        <div class="splash-content">
-            <div class="logo-container">
-                <i class="fas fa-graduation-cap logo-icon"></i>
-                <h1 class="logo-text">Sheikh Tais Academy</h1>
-            </div>
-            <div class="loading-spinner"></div>
-        </div>
-    </div>
 
     <!-- Header / Navbar -->
     <header class="header" id="header">
