--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sheikh Tais Academy</title>
+    <title>Sheikh Tais Academy - learn and grow </title>
     <meta name="description" content="Sheikh Tais Academy - Your comprehensive school management app for students, parents, and teachers.">
     
     <!-- Google Fonts -->
@@ -88,7 +88,7 @@
             <li><a href="about.html" class="sidebar-link">About</a></li>
             <li><a href="features.html" class="sidebar-link">Features</a></li>
             <li><a href="news.html" class="sidebar-link">News</a></li>
-            <li><a href="documentation.html" class="sidebar-link">Documentation</a></li>
+            <li><a href="documentation.html" class="sidebar-link">How to</a></li>
             <li><a href="gallery.html" class="sidebar-link">Gallery</a></li>
             <li><a href="download.html" class="sidebar-link">Download</a></li>
             <li><a href="developer.html" class="sidebar-link">Developer</a></li>
@@ -106,7 +106,7 @@
                    <div class="call-to-action">
                             <h3>Get Started</h3>
                             <p>Seek knowledge From Birth to Death</p>
-                            <a href="application.html" class="cta-button">Apply now</a>
+                            <a href="application.html" class="cta-button">Attend now</a>
                             <a href="/download.html" class="cta-button">Download</a>
                         </div>
                 </div>
@@ -114,7 +114,7 @@
                         <img src="./gallery/1757249644500.jpg" alt="Sheikh Tais Academy App" />
                         <div class="portfolio-overlay">
                             <h4>Sheikh Tais Academy </h4>
-                            <p>One of the buildings</p>
+                            <p>Junior secondary building</p>
                         </div>
                     </div>
             </div>
@@ -156,11 +156,7 @@
                 </div>
             </div>
         </section>
-       <div class="call-to-action">
-                            <h3>Get your web now</h3>
-                            <p>Know about the engineer of tais softaware platforms. Get your own website now </p>
-                            <a href="Developer.html" class="cta-button">Developer</a>
-                        </div>   
+     
         <!-- Features Section -->
         <section id="features" class="features section">
             <div class="container">
@@ -249,7 +245,6 @@
             </div>
         </section>
 
-        <!-- News Section -->
         <section id="news" class="news section">
             <div class="container">
                 <h2 class="section-title">Latest News & Updates</h2>
@@ -298,8 +293,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- Download Section -->
         <section id="download" class="download section">
             <div class="container">
                 <div class="download-content">
@@ -322,26 +315,26 @@
                                 <span>Secure and user-friendly interface</span>
                             </div>
                         </div>
-                        <div class="download-buttons">
-                            <a href="./downloads/app-release.apk" class="download-btn android">
-                                <i class="fab fa-android"></i>
-                                <div>
-                                    <span class="download-text-small">Download for</span>
-                                    <span class="download-text-large">Android</span>
+                    <div class="download-buttons-main">
+                            <a href="/download.html" class="download-btn primary">
+                                <div class="download-btn-text">
+                                    <span class="download-btn-small">Download</span>
                                 </div>
                             </a>
-                            <div class="download-note">iOS version coming soon!</div>
                         </div>
                     </div>
                     <div class="download-image">
-                        <img src="/img/1756565009582.jpg" alt="Mobile app preview" />
+                        <img src="/img/file_000000007f1461f8827b752d8c94b5a9.png" alt="Mobile app preview" />
                     </div>
                 </div>
             </div>
         </section>
     </main>
-
-    <!-- Footer -->
+  <div class="call-to-action">
+                            <h3>Get in touch</h3>
+                            <p>Contact the adminstration now or get more info about tais academy.</p>
+                            <a href="contact.html" class="cta-button">Contact</a>
+                        </div>   
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
@@ -351,7 +344,7 @@
                         <span>Sheikh Tais Academy</span>
                     </div>
                     <p class="footer-description">
-                        Committed to providing quality education and fostering academic excellence through innovative learning solutions.
+                        Motto: Seek Kmowledge from Birth yo death
                     </p>
                     <div class="social-links">
                         <a href="#" class="social-link">
