--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
                                 </div>
                                 <div class="contact-details">
                                     <h3>Address</h3>
-                                    <p>Shell, Woodlowy Park<br>Freetown, Sierra Leone</p>
+                                    <p>Shell,old lorry park<br>Freetown, Sierra Leone</p>
                                 </div>
                             </div>
 
@@ -120,7 +120,7 @@
                                 </div>
                                 <div class="contact-details">
                                     <h3>Phone</h3>
-                                    <p>Main Office: +232 (0) 123-4567<br>Admissions: +232 (0) 123-4568</p>
+                                    <p>Main Office: +232 99 051737<br>Admissions: +232 (0) 123-4568</p>
                                 </div>
                             </div>
 
@@ -186,7 +186,6 @@
                             <div class="form-group checkbox-group">
                                 <label class="checkbox-label">
                                     <input type="checkbox" id="newsletter" name="newsletter">
-                                    <span class="checkmark"></span>
                                     Subscribe to our newsletter for updates and announcements
                                 </label>
                             </div>
@@ -212,7 +211,7 @@
                         <span>Sheikh Tais Academy</span>
                     </div>
                     <p class="footer-description">
-                        Committed to providing quality education and fostering academic excellence through innovative learning solutions.
+                        Motto: Seek Kmowledge from Birth yo death
                     </p>
                     <div class="social-links">
                         <a href="#" class="social-link">
