--- a/news-info-fire.html
+++ b/news-info-fire.html
@@ -207,7 +207,7 @@
                         <span>Sheikh Tais Academy</span>
                     </div>
                     <p class="footer-description">
-                        Committed to providing quality education and fostering academic excellence through innovative learning solutions.
+                        Motto: Seek Kmowledge from Birth yo death
                     </p>
                     <div class="social-links">
                         <a href="#" class="social-link">
