--- a/developer.html
+++ b/developer.html
@@ -74,7 +74,7 @@
             <li><a href="about.html" class="sidebar-link">About</a></li>
             <li><a href="features.html" class="sidebar-link">Features</a></li>
             <li><a href="news.html" class="sidebar-link">News</a></li>
-            <li><a href="documentation.html" class="sidebar-link">Documentation</a></li>
+            <li><a href="documentation.html" class="sidebar-link">How to</a></li>
             <li><a href="gallery.html" class="sidebar-link">Gallery</a></li>
             <li><a href="download.html" class="sidebar-link">Download</a></li>
             <li><a href="developer.html" class="sidebar-link active">Developer</a></li>
@@ -96,7 +96,7 @@
             <div class="container">
                 <div class="developer-content">
                     <div class="developer-image">
-                        <img src="./gallery/1757238086130.jpg" alt="Developer photo" />
+                        <img src="/dev/IMG_20250911_115449.jpg" alt="Developer photo" />
                         <div class="developer-badge">
                             <i class="fas fa-code"></i>
                             <span>Full Stack Developer</span>
@@ -114,7 +114,7 @@
                             <div class="skills-grid">
                                 <div class="skill-item">
                                     <i class="fab fa-android"></i>
-                                    <span>Android Development</span>
+                                    <span>Android</span>
                                 </div>
                                 <div class="skill-item">
                                     <i class="fas fa-code"></i>
@@ -267,7 +267,7 @@
                         <span>Sheikh Tais Academy</span>
                     </div>
                     <p class="footer-description">
-                        Committed to providing quality education and fostering academic excellence through innovative learning solutions.
+                        Motto: Seek Kmowledge from Birth yo death
                     </p>
                     <div class="social-links">
                         <a href="#" class="social-link">
